<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Recorder</string>
    <string name="audio_record">Audio Record</string>
    <string name="media_record">Media Record</string>
    <string name="title_activity_media_record">MediaRecordActivity</string>
    <string name="title_activity_audio_record">AudioRecordActivity</string>

    <string name="action_settings">Settings</string>
    <string name="action_clean_cache">Clean Cache</string>
    <string name="start_record">Start Record</string>
    <string name="stop_record">Stop Record</string>
    <string name="play_record">Play Record</string>
    <string name="play_preparing">Preparing</string>

</resources>
