<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="me.relex.recorder.audio.AudioRecordActivity">

    <android.support.v7.widget.Toolbar
        android:id="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?actionBarSize"
        android:background="?colorPrimaryDark"
        app:title="@string/title_activity_audio_record"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:gravity="center">


        <Button
            style="@style/TextButton"
            android:id="@id/start_record"
            android:text="@string/start_record"/>

        <Button
            style="@style/TextButton"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:id="@id/stop_record"
            android:text="@string/stop_record"/>

        <Button
            style="@style/TextButton"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:id="@id/play_record"
            android:text="@string/play_record"/>


    </LinearLayout>

</LinearLayout>